--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ matplotlib==3.9.0
 numpy==1.26.4
 pandas==2.2.2
 scikit-learn==1.5.0
+fastapi==0.110.1
+Jinja2==3.1.3
+uvicorn==0.28.0
+pycountry==24.6.1
